src/test/ui/parser/issue-14303-enum.stderr
error: incorrect parameter order
  --> $DIR/issue-14303-enum.rs:3:7
   |
LL | enum X<'a, T, 'b> {
   |       ^^^^^^^^^^^ help: reorder the parameters: `<'a, 'b, T>`

error: aborting due to previous error

